--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ nav {
 .why-choose-us {
   background-color: #eeeeee;
   border-radius: 5px;
-  padding: 10px;
+  padding: 10px 0 50px;
   font-family: "lato Bold";
   font-size: 16px;
   font-weight: 400;
@@ -168,7 +168,7 @@ nav {
   width: 100%;
   flex-direction: column;
   align-items: center;
-  margin: 250px 0;
+  margin: 250px 0 0;
   box-sizing: border-box;
   color: rgb(0, 42, 82);
 }
@@ -180,4 +180,115 @@ nav {
   font-weight: 700;
   padding-top: 50px;
   padding-bottom: 30px;
+}
+
+.footer-div1 {
+  padding: 50px;
+  background-color: #001636;
+  background-size: contain;
+  color: rgb(187, 187, 187);
+}
+
+.info1-details h4 {
+  color: white;
+}
+
+.info-p1 {
+  margin-bottom: 2%;
+}
+
+.info-p3 {
+  padding: 20px 0px 1px;
+}
+
+.info2-details {
+  margin-top: 70px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  font-family: "Lato Light";
+}
+
+.info2-details a {
+  color: rgb(187, 187, 187);
+  text-decoration: none;
+}
+
+.info2-details a:hover {
+  color: #0a58ca;
+}
+
+.info3-details {
+  margin-top: 70px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  font-family: "Lato Light";
+}
+
+.info3-details a {
+  text-decoration: none;
+  color: rgb(187, 187, 187);
+}
+
+.landing {
+  border: 1px solid white;
+  background-color: #141414;
+  color: #fff;
+  /* padding: 80px 0 25px; */
+  display: flex;
+  flex-direction: column;
+}
+
+.landing-page1 {
+  display: flex;
+  padding: 2rem 0;
+  gap: 50px;
+  flex-direction: column;
+}
+
+.page2-image {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.page2-image div {
+  color: darkgray;
+  font-size: 12px;
+  text-align: center;
+  width: 23%;
+}
+
+.page2-image img {
+  width: 70%;
+  height: 70%;
+}
+
+.ft-p {
+  color: darkgray;
+  font-size: small;
+  text-align: center;
+}
+
+.social-icon {
+  margin: 20px 0;
+  /* padding-left: 100px; */
+}
+
+.social-icon a {
+  margin-left: 10%;
+  color: #f7f7f7;
+  width: 100%;
+  background-color: rgb(88, 88, 88);
+  border-radius: 5px;
+  padding: 15px;
+}
+
+.landing-page2 h1 {
+  text-align: center;
+  color: darkgray;
 }
